[gd_scene load_steps=5 format=3 uid="uid://d2vlwtxnstpob"]

[ext_resource type="Script" path="res://PlayerScript.gd" id="1_7nolq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7dbo"]
size = Vector2(60, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tdta"]
size = Vector2(50, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u01pc"]
size = Vector2(60, 60)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_7nolq")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f7dbo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0

[node name="FloorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorArea"]
position = Vector2(0, 35)
shape = SubResource("RectangleShape2D_5tdta")

[node name="PointCollector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointCollector"]
shape = SubResource("RectangleShape2D_u01pc")

[node name="BombCollector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombCollector"]
shape = SubResource("RectangleShape2D_u01pc")

[connection signal="body_entered" from="FloorArea" to="." method="hit_floor"]
[connection signal="body_exited" from="FloorArea" to="." method="unhit_floor"]
[connection signal="body_entered" from="PointCollector" to="." method="CollectPoint"]
[connection signal="body_entered" from="BombCollector" to="." method="BombHit"]
